# kich-sms

./: .replit  COMMIT_EDITMSG  FINAL.py  HOSTING_INSTRUCTIONS.md  README.md  README.txt  README_FINAL.md  README_MULTI_ACCOUNT.md  RENDER_DEPLOYMENT_GUIDE.md  Telegram_Sender_Win10.spec  WINDOWS10_EXE_GUIDE.md  __init__.py  anti_spam.py  app.py  app_wsgi (1).py  app_wsgi.py  auth.html  auto_send.py  base.html  build.py  build_exe.py  build_executable.py  build_multi_account_exe.bat  build_portable.py  build_simplest_exe.bat  build_telegram_sender.bat  check_session.py  compose.html  config.json  config_window.py  confirm.html  create_zip_package.py  direct_login.session  direct_send.py  direct_send_multiple.py  direct_session.session  discover_telegram.py  easy_import.py  easy_telegram_sender.py  emergency_send.py  (+72 more)
logs/refs/heads/: main  replit-agent
refs/heads/: main  replit-agent
