[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptg>=0.5.0.post0",
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "pillow>=11.1.0",
    "psycopg2-binary>=2.9.10",
    "pyinstaller>=6.12.0",
    "sqlalchemy>=2.0.39",
    "telethon>=1.39.0",
    "twilio>=9.5.0",
    "flask-wtf>=1.2.2",
]
